--- a/src/views/components/header.ejs
+++ b/src/views/components/header.ejs
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LaVegaTech</title>
     <link rel="icon" type="image/png" href="/img/lavegatech-logo.png">    
-    <link type="text/css" rel="stylesheet" href="/css/login.css" />
+    <link type="text/css" rel="stylesheet" href="/css/login.css"/>
+    <link type="text/css" rel="stylesheet" href="/css/error.css"/>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
