--- a/public/css/style.css
+++ b/public/css/style.css
@@ -729,7 +729,7 @@ textarea.input {
   position: absolute;
   width: 400px;
   background: #FFF;
-  padding: 15px;
+  padding: 10px;
   -webkit-box-shadow: 0px 0px 0px 2px #E4E7ED;
   box-shadow: 0px 0px 0px 2px #E4E7ED;
   z-index: 99;
@@ -744,13 +744,14 @@ textarea.input {
 }
 
 .cart-dropdown .cart-list{
-  max-height: 330px;
+  max-height: 280px;
   overflow-y: scroll;
   margin-bottom: 10px;
 }
 
 .cart-dropdown .cart-list .product-widget {
-  padding: 10px;
+  padding: -20px;
+  margin-bottom: -15px;
   -webkit-box-shadow: none;
   box-shadow: none;
 }
@@ -762,7 +763,7 @@ textarea.input {
 .product-precios, .product-nombres{
   position: relative;
   font-weight: bold;
-  top: -30px;
+  top: -20px;
   margin-left: 10%;
 }
 
@@ -778,17 +779,17 @@ textarea.input {
 }
 
 .cart-dropdown .cart-list .product-widget .product-img img {
-  width: 100%;
-  margin-left: 50%;
   object-fit: cover;
   display: block;
+  width: 100%;
+  max-height: 80px;
+  margin-left: 50%;
 }
 
 .cart-dropdown .cart-list .product-widget .product-body {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  margin-top: 0px;
 }
 
 .cart-dropdown .cart-list .product-widget .product-body .product-precios {
